--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
                 <p class="card-text">Truck</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="menu-price">$ 2.69</p>
-                  <a href="/detailItem/chevyDetail.html" class="btn btn-buy">
+                  <a href="HWShop/detailItem/chevyDetail.html" class="btn btn-buy">
                     <i class="bi bi-cart-plus"></i>BUY
                   </a>
                 </div>
