--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
                 <p class="card-text">Truck</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="menu-price">$ 2.69</p>
-                  <a href="HWShop/detailItem/chevyDetail.html" class="btn btn-buy">
+                  <a href="detailItem/chevyDetail.html" class="btn btn-buy">
                     <i class="bi bi-cart-plus"></i>BUY
                   </a>
                 </div>
@@ -112,7 +112,7 @@
                 <p class="card-text">Collector</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="menu-price">$ 3.49</p>
-                  <a href="HWShop/detailItem/bonesDetail.html" class="btn btn-buy">
+                  <a href="detailItem/bonesDetail.html" class="btn btn-buy">
                     <i class="bi bi-cart-plus"></i>BUY
                   </a>
                 </div>
@@ -132,7 +132,7 @@
                 <p class="card-text">Premium</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="menu-price">$ 4.99</p>
-                  <a href="HWShop/detailItem/nissansDetail.html" class="btn btn-buy">
+                  <a href="detailItem/nissansDetail.html" class="btn btn-buy">
                     <i class="bi bi-cart-plus"></i>BUY
                   </a>
                 </div>
@@ -152,7 +152,7 @@
                 <p class="card-text">Track sets</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="menu-price">$ 24.99</p>
-                  <a href="HWShop/detailItem/tornadoDetail.html" class="btn btn-buy">
+                  <a href="detailItem/tornadoDetail.html" class="btn btn-buy">
                     <i class="bi bi-cart-plus"></i>BUY
                   </a>
                 </div>
@@ -172,7 +172,7 @@
                 <p class="card-text">Premium</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="menu-price">$ 5.99</p>
-                  <a href="HWShop/detailItem/fordDetail.html" class="btn btn-buy">
+                  <a href="detailItem/fordDetail.html" class="btn btn-buy">
                     <i class="bi bi-cart-plus"></i>BUY
                   </a>
                 </div>
@@ -192,7 +192,7 @@
                 <p class="card-text">Premium</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="menu-price">$ 6.99</p>
-                  <a href="HWShop/detailItem/porcheDetail.html" class="btn btn-buy">
+                  <a href="detailItem/porcheDetail.html" class="btn btn-buy">
                     <i class="bi bi-cart-plus"></i>BUY
                   </a>
                 </div>
