--- a/detailItem/chevyDetail.html
+++ b/detailItem/chevyDetail.html
@@ -32,7 +32,7 @@
     <div class="container-fluid py-2 mt-2">
       <div class="row align-items-center">
         <div class="col-4">
-          <a href="/home.html" class="btn btn-back">
+          <a href="home.html" class="btn btn-back">
             <i class="bi bi-arrow-left"></i> back
           </a>
         </div>
@@ -72,7 +72,7 @@
           <strong>$2.69</strong>
         </p>
         <div class="btn-Buy">
-          <a href="/order.html" class="btn btn-lg btn-success mt-3">
+          <a href="order.html" class="btn btn-lg btn-success mt-3">
             <i class="bi bi-cart-plus"></i> Buy Now
           </a>
         </div>
